<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="#addeff" >
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:src="@drawable/ind_logo" />
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:src="@drawable/mobank_logo" />
    
    <TextView
        android:id="@+id/tvLoginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_username"
        />
    
    <EditText
        android:id="@+id/edLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username_edittext_hint"
        android:layout_marginBottom="10dp"
        android:background="@drawable/loginstyle"
        android:padding="5dp"
        android:inputType="textPersonName"
        />
    
    <TextView
        android:id="@+id/tvLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        />
    
    <EditText
        android:id="@+id/edLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_edittext_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:background="@drawable/loginstyle"
        android:padding="5dp"
        />
    
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/button_login_text"
        />


</LinearLayout>