<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:stretchColumns="2" >

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/tvSourceAcc" />

        <Spinner
            android:id="@+id/SpinnerSourceAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/tvTargetAcc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edTargetAccPartOne"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:textAlignment="center"
                android:maxLength="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />

            <EditText
                android:id="@+id/edTargetAccPartTwo"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:textAlignment="center"
                android:maxLength="6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />

            <EditText
                android:id="@+id/edTargetAccPartThree"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:textAlignment="center"
                android:maxLength="3" />
        </LinearLayout>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/tvValue" />

        <EditText
            android:id="@+id/edValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tvSourceAccCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="Curr." />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/tvComment" />

        <EditText
            android:id="@+id/edComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType="text" />
    </TableRow>

    <TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_span="4"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/btnTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnTransfer"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancel"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />
        </LinearLayout>
    </TableRow>

</TableLayout>